--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,13 @@ Pyrogram==1.2.9
 pyromod==1.5
 PySocks==1.7.1
 python-dotenv==0.19.0
-requests==2.27.1
+requests==2.31.0
 soupsieve==2.2.1
 TgCrypto==1.2.2
 urllib3==1.26.8
 websockets==9.1
 yt-dlp==2021.7.24
+fastapi
+kaleido
+python-multipart
+uvicorn
